fix weird scrolling issues on ios

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,7 +54,6 @@ md-content p.content {
 }
 
 md-sidenav {
-  min-height: 100vh;
   text-align: left;
 
   md-list-item .md-list-item-inner md-icon {
